--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,27 +1,25 @@
 ---
-export interface Props {
-    title: string;
-}
-const { title } = Astro.props;
+import type { LayoutProps } from "../types";
+import "../styles/global.css";
+
+const { title } = Astro.props as LayoutProps;
+
+const currentYear = new Date().getFullYear();
 ---
 
 <!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>{title} | Dev Portfolio</title>
-        <link rel="stylesheet" href="/src/styles/global.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap"
-            rel="stylesheet"
-        />
+        <meta name="description" content="Astro description" />
+        <meta name="viewport" content="width=device-width" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <meta name="generator" content={Astro.generator} />
+        <title>{title} | Roshan Parida/Portfolio</title>
     </head>
     <body>
         <header>
-            <h1>Dev_Portfolio</h1>
+            <h1><a href="/" aria-label="Homepage">Roshan Parida</a></h1>
             <nav>
                 <a href="/">Home</a>
                 <a href="/about">About</a>
@@ -29,13 +27,13 @@ const { title } = Astro.props;
                 <a href="/contact">Contact</a>
             </nav>
         </header>
+
         <main>
             <slot />
         </main>
+
         <footer>
-            <span
-                >© {new Date().getFullYear()} Dev_Portfolio // All rights reserved</span
-            >
+            &copy; {currentYear} Roshan Parida. All rights reserved.
         </footer>
     </body>
 </html>
